--- a/slides/week6.qmd
+++ b/slides/week6.qmd
@@ -30,9 +30,11 @@ theme_set(theme_gray(base_size = 20))
 nu_purple =  "#4E2A84"
 ```
 
-## Exploration idea
+## Exploration ideas
 
-Pick up a tutorial using a pre-trained neural network or LLM and apply it to new data
+- Pick up a tutorial using a pre-trained neural network or open source LLM (BERT, LLaMA) and apply it to new data
+
+- Find a new NN application that does not involve text, images, audio, video, or genomics
 
 ## Tutorials
 
@@ -45,7 +47,9 @@ Pick up a tutorial using a pre-trained neural network or LLM and apply it to new
 - RNNs
 
 **Coding**
+
 - Simple NN in `R`
+- `Python` IDE options
 - Pre-trained NN in `Python`
 
 # Intuition
@@ -160,4 +164,142 @@ This is kind of a neural network with no hidden layers
 ## Example: Single hidden layer NN with two nodes (whiteboard)
 
 ![](img/simple_nn.png){fig-align="center"}
+
+## Single hidden layer with K nodes
+
+$$
+\begin{align}
+f(X) & = & \beta_0 + \sum_{k=1}^K \beta_k \color{purple}{h_k(X)}\\
+& = & \beta_0 + \sum_{k=1}^K \beta_k \color{purple}{g(w_{k0} + \sum_{j=1}^p w_{kj} X_j)}
+\end{align}
+$$
+
+## Moving pieces
+
+:::: {.columns}
+
+::: {.column width=50%}
+**Example: MNIST data**
+
+![Modified National Institute of Standards and Technology](img/mnist.png)
+:::
+
+::: {.column width=50%}
+
+::: incremental
+- N = 60k training, 10k test
+- 784 pixels (variables) per image
+- 785 coefficients in input
+- Layer 1: 256 nodes
+- Layer 2: 128 nodes
+- $785 \times 256 + 257 \times 128 = 233,856$ weights!
+:::
+
+:::
+
+::::
+
+. . .
+
+We need **regularization** and efficient **parameter search**
+
+## Regularization
+
+Two options:
+
+1. Lasso/ridge penalty $\lambda$
+
+2. Dropout rate $\phi$
+
+## Dropout learning
+
+![](img/nn_dropout.png)
+
+## Optimizing weights and biases
+
+You *could* try an extremely large grid of possible parameters... but that would take *forever*
+
+. . .
+
+So we take two steps to tune weights and biases efficiently
+
+1. Backpropagation
+
+AND
+
+2. Gradient descent
+
+---
+
+![](https://miro.medium.com/v2/resize:fit:1280/format:webp/1*VF9xl3cZr2_qyoLfDJajZw.gif){fig-align="center"}
+
+
+## Gradient descent
+
+![](https://telefonicatech.uk/wp-content/uploads/adatis/GradientDescentGIF.gif){fig-align="center"}
+
+  
+## Many decisions
+
+- Number of hidden layers
+
+- Nodes per layer
+
+- Dropout rate/regularization penalty
+
+- Stochastic gradient descent batch size
+
+- Number of epochs
+
+- Data augmentation
+
+. . .
+
+**In practice:** Use pre-trained neural networks
+
+# Special types
+
+## Convolutional Neural Network
+
+**CNN**
+
+![](img/cnn.png){fig-align="center"}
+
+## Convolution layer {.smaller}
+
+$$
+ \text{Original Image} = \begin{bmatrix} a & b & c \\ d & e & f \\ g & h & i \\ j & k & l \end{bmatrix}
+$$
+
+$$
+\text{Convolution Filter} = \begin{bmatrix} \alpha & \beta \\ \gamma & \delta \end{bmatrix}
+$$
+
+
+$$
+\text{Convolved Image} = \begin{bmatrix} a\alpha + b\beta + d\gamma + e\delta & b\alpha + c\beta + e\gamma + f\delta \\[6pt] d\alpha + e\beta + g\gamma + h\delta & e\alpha + f\beta + h\gamma + i\delta \\[6pt] g\alpha + h\beta + j\gamma + k\delta & h\alpha + i\beta + k\gamma + l\delta \end{bmatrix}
+$$
+
+
+## Pooling layer
+
+$$
+\text{Max pool } \begin{bmatrix} 1 & 2 & \color{purple}5 & 3 \\ \color{purple}3 & 0 & 1 & 2 \\ \color{purple}2 & 1 & 3 & \color{purple}4 \\ 1 & 1 & 2 & 0 \end{bmatrix} \;\longrightarrow\; \begin{bmatrix} 3 & 5 \\ 2 & 4 \end{bmatrix}
+$$
+
+
+## Recurrrent Neural Network
+
+**RNN**
+
+![](img/rnn.png){fig-align="center"}
+
+
+# Coding
+
+## `Python` IDEs
+
+## Machine learning libraries
+
+## Pre-trained neural networks
 
