--- a/slides/week6.qmd
+++ b/slides/week6.qmd
@@ -36,7 +36,6 @@ nu_purple =  "#4E2A84"
 
 - Find a new NN application that does not involve text, images, audio, video, or genomics
 
-## Tutorials
 
 ## Plan for today
 
@@ -299,7 +298,21 @@ $$
 
 ## `Python` IDEs
 
+- [Google Colab](https://colab.research.google.com)
+
+- [Jupyter Labs](https://jupyter.org)
+
+- [VS Code](https://code.visualstudio.com/docs/python/python-tutorial)
+
+- [Positron](https://positron.posit.co)
+
 ## Machine learning libraries
 
+- [PyTorch](https://docs.pytorch.org/tutorials/index.html)
+
+- [scikit-learn](https://scikit-learn.org/stable/)
+
 ## Pre-trained neural networks
+
+<https://github.com/norawebbwilliams/images_as_data.git>
 
