--- a/slides/week6.qmd
+++ b/slides/week6.qmd
@@ -47,7 +47,6 @@ nu_purple =  "#4E2A84"
 
 **Coding**
 
-- Simple NN in `R`
 - `Python` IDE options
 - Pre-trained NN in `Python`
 
@@ -312,7 +311,9 @@ $$
 
 - [scikit-learn](https://scikit-learn.org/stable/)
 
-## Pre-trained neural networks
+- [TensorFlow](/Users/gustavodiaz/Downloads/rose.png)
 
-<https://github.com/norawebbwilliams/images_as_data.git>
+# Demo
+
+
 
