--- a/scripts/nn_demo.ipynb
+++ b/scripts/nn_demo.ipynb
@@ -37,11 +37,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "ykOFt7p2ykKW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/gustavodiaz/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.applications import MobileNetV2\n",
@@ -67,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "TXYuNlLfylRW"
       },
@@ -77,13 +86,18 @@
         "my_seed = 112358\n",
         "random.seed(my_seed)\n",
         "\n",
+        "import os\n",
+        "\n",
+        "dirname = os.getcwd()\n",
+        "\n",
+        "\n",
         "# Set file path\n",
         "flower_path = dirname + \"/flower_photos/\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "metadata": {
         "id": "GaKGaSRNMsHY"
       },
@@ -138,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 8,
       "metadata": {
         "id": "6cj6HiGiFTS7"
       },
@@ -163,23 +177,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {
         "id": "yHoCiJUkFwjT"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2026-02-11 16:23:31.939538: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Class weights: {0: np.float64(1.1673956262425447), 1: np.float64(0.8121715076071923), 2: np.float64(1.1184761904761904), 3: np.float64(1.0794117647058823), 4: np.float64(0.9160686427457099)}\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2026-02-12 13:30:23.013509: I tensorflow/core/framework/local_rendezvous.cc:407] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
           ]
         }
       ],
@@ -198,20 +212,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "8CKEmwixMsMC"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5\n",
-            "\u001b[1m9406464/9406464\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 0us/step\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Use the based model from the pre-trained model MobileNetV2\n",
         "# Note: You can also try with ResNet50 or other pre-trained models!\n",
@@ -241,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 12,
       "metadata": {
         "id": "nGlTp57mMsOo"
       },
@@ -251,9 +256,9 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/2\n",
-            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 212ms/step - accuracy: 0.6562 - loss: 1.1057 - val_accuracy: 0.8065 - val_loss: 0.5507\n",
+            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 309ms/step - accuracy: 0.4309 - loss: 1.3770 - val_accuracy: 0.5817 - val_loss: 1.0395\n",
             "Epoch 2/2\n",
-            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 220ms/step - accuracy: 0.8942 - loss: 0.3265 - val_accuracy: 0.8556 - val_loss: 0.4289\n"
+            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 343ms/step - accuracy: 0.8019 - loss: 0.6006 - val_accuracy: 0.7602 - val_loss: 0.6851\n"
           ]
         }
       ],
@@ -284,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "mCsqxDDnMsRB"
       },
@@ -309,11 +314,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "4jBMqs6GPTTH"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/2\n",
+            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 327ms/step - accuracy: 0.8728 - loss: 0.4145 - val_accuracy: 0.8120 - val_loss: 0.5290\n",
+            "Epoch 2/2\n",
+            "\u001b[1m92/92\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 331ms/step - accuracy: 0.9103 - loss: 0.2850 - val_accuracy: 0.8406 - val_loss: 0.4481\n"
+          ]
+        }
+      ],
       "source": [
         "# Train the model\n",
         "epochs = 2\n",
@@ -325,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {
         "id": "3gt6jUMEMsTf"
       },
@@ -347,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {
         "id": "-gXvp57cMsWI"
       },
@@ -360,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 17,
       "metadata": {
         "id": "JwgtGDXVMsY3"
       },
@@ -375,6 +391,7 @@
         }
       ],
       "source": [
+        "\n",
         "# Provide the image\n",
         "img_path = dirname + \"/rose.png\"\n",
         "\n",
