--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ Click [here](/syllabus.pdf) for the most recent version.
 
 [Week 6: Neural networks](slides/week6.html)
 
-Week 7: Ensemble learning
+[Week 7: Ensemble learning](slides/week7.html)
 
 Week 8: Unsupervised learning
 
